--- a/Backend/ToDoList.API/appsettings.json
+++ b/Backend/ToDoList.API/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=db31340.public.databaseasp.net; Database=db31340; User Id=db31340; Password=F!p56Y@hn#4D; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+  }
 
 }
