Add JWT authentication to ToDoList API
Introduced JWT-based authentication to enhance security in the ToDoList API. Key changes include:

- Updated Program.cs to configure JWT authentication and Swagger security.
- Added JWT settings in appsettings.json for key, issuer, and audience.
- Modified ApplicationUser.cs to include RefreshTokens management.
- Implemented new services and interfaces for login, registration, and token handling.
- Added database migrations for RefreshToken table and user schema updates.

--- a/Backend/ToDoList.API/appsettings.json
+++ b/Backend/ToDoList.API/appsettings.json
@@ -8,6 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Server=db31340.public.databaseasp.net; Database=db31340; User Id=db31340; Password=F!p56Y@hn#4D; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+  },
+  "Jwt": {
+    "Key": "m.!Fg#Nle6.gAAA,QuhJmBhBiX7K0A4lgu3Ovh_7_RP",
+    "Issuer": "https://todolist73.runasp.net/",
+    "Audience": "https://todolist73.runasp.net/"
   }
 
 }
